<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e1e1e1"
    tools:context="cn.imzfz.wordbook.MainActivity">

    <android.support.v7.widget.SearchView
        android:id="@+id/searchview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#3d706e"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:textColor="#000000"
        app:iconifiedByDefault="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:queryHint="请输入关键字" />


    <LinearLayout
        android:id="@+id/today_word"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5sp"
        android:background="@drawable/border"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchview">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"

            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchview">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_marginTop="10sp"
                android:layout_weight="1"
                android:text="@string/today_word"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/change"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_marginTop="10sp"
                android:layout_weight="0.1"
                android:text="@string/change"
                android:textColor="#000000"
                android:textSize="20sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="@drawable/line" />

        <TextView
            android:id="@+id/show_phonetic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2sp"
            android:gravity="center"
            android:text="@string/word"
            android:textColor="#4d4e4d"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/show_word"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:gravity="center"
            android:text="@string/word"
            android:textColor="#00c600"
            android:textSize="80sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="@drawable/line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/pronunciation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_marginTop="1sp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/pronunciation"
                android:textColor="#000000"
                android:textSize="20sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#000000"
                android:layout_gravity="center_horizontal"
                />

            <TextView
                android:id="@+id/delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_marginTop="1sp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/delete"
                android:textColor="#bebebe"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5sp"
        android:background="@drawable/border"
        android:orientation="vertical"
        android:padding="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/today_word">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/vocabulary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/count"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_weight="1">

                <TextView
                    android:id="@+id/word_count"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10sp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="1"
                    android:textColor="#000000"
                    android:textSize="30sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/today_add"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10sp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="1"
                    android:textColor="#000000"
                    android:textSize="30sp"
                    app:layout_constraintLeft_toLeftOf="@+id/word_count"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/add_word"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10sp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="1"
                    android:textColor="#000000"
                    android:textSize="30sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/count"
                app:layout_constraintVertical_weight="1">

                <TextView
                    android:id="@+id/word_count_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10sp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/word_count"
                    android:textColor="#bcbbbb"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/today_add_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10sp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/today_add"
                    android:textColor="#bcbbbb"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/add_word_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10sp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/add_word"
                    android:textColor="#bcbbbb"
                    android:textSize="20sp" />
            </LinearLayout>
        </android.support.constraint.ConstraintLayout>


        <!--   <Button
               android:id="@+id/open_book"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:layout_marginTop="25dp"
               android:background="@drawable/button"
               android:gravity="center"
               android:padding="20sp"
               android:text="@string/open_book"
               android:textSize="20sp" />-->
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
